# cuda_pratise

./: README.md
1_cuda_reduce_study/: CMakeLists.txt  bank_conflict_analysis.md  my_reduce_v0_global_memory  my_reduce_v0_global_memory.cu  my_reduce_v1_shared_memory  my_reduce_v1_shared_memory.cu  my_reduce_v2_no_divergence_branch  my_reduce_v2_no_divergence_branch.cu  my_reduce_v3_no_bank_conflict  my_reduce_v3_no_bank_conflict.cu  my_reduce_v4_add_during_load  my_reduce_v4_add_during_load_plan_a.cu  my_reduce_v4_add_during_load_plan_b  my_reduce_v4_add_during_load_plan_b.cu  my_reduce_v5_unroll_last_warp.cu  my_reduce_v6_completely_unroll.cu  my_reduce_v7_multi_add.cu  my_reduce_v8_shuffle.cu  reduce_v2_logic_diagram.md  reduce_v3_logic_diagram.md  reduce_v4_logic_diagram.md  reduce_v5_logic_diagram.md  reduce_v6_logic_diagram.md  reduce_v7_logic_diagram.md  reduce_v8_logic_diagram.md
2_sgemm/: CMakeLists.txt  README.md  my_sgemm_v0_global_mem.cu  my_sgemm_v1_shared_mem.cu  my_sgemm_v2_shared_mem_sliding_window.cu  my_sgemm_v3_increase_work_of_per_thread.cu  my_sgemm_v3_using_float4.cu  my_sgemm_v4_register_cache.cu  sgemm_v0_logic_diagram.md  sgemm_v1_logic_diagram.md  sgemm_v1_naive.cu  sgemm_v2_logic_diagram.md  sgemm_v2_mem_coaliescing.cu  sgemm_v3_logic_diagram.md  sgemm_v3_shared_mem.cu  sgemm_v4_logic_diagram.md
3_softmax/: softmax_naive  softmax_naive.cu
4_reduce/: my_report.ncu-rep  reduce  reduce.cu  reduce_v1  reduce_v1.cu  reduce_v2  reduce_v2.cu  reduce_v3  reduce_v3.cu  reduce_v4  reduce_v4.cu
final_verify/: assessment_project_template.cu  leetgpu_style_challenges.md  performance_optimization_guide.md  quick_assessment  quick_assessment.cu  skill_assessment.md  task1  task1.cu
